grammar edits to text content

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 				- 2018 -
 			</h3>
 			<hr>
-			<p class="intro__dek">In the past decade, <strong>cryptocurrencies and blockchains</strong> have become a force to be reckoned with in terms of technological <strong>innovation</strong>s and potential <strong>socio-economic impact</strong>. However, due to the manner in
+			<p class="intro__dek">In the past decade, <strong>cryptocurrencies and blockchains</strong> have become increasingly significant in terms of technological <strong>innovation</strong> and potential <strong>socio-economic impact</strong>. However, due to the manner in
 				which blockchain-based technologies operate, they run the <strong>risk</strong> of reproducing existing <strong>inequalities</strong>. The inequality in question here is that surrounding <strong>digital divide</strong></p>
-			<p class="intro__dek">- the uneven distribution and development of information and communication technologies (ICT) from local areas to the global commons -</p>
+			<p class="intro__dek">- the uneven distribution and development of information and communication technologies (ICT) from local areas to global communities -</p>
 			<p class="intro__dek">and the global distribution of <strong>Bitcoin mining</strong></p>
 			<p class="intro__dek">- a labor task facilitated by humans and machines in order to extract cryptocurrency rewards -</p>
 			<hr>
