--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	<script src="https://unpkg.com/topojson@3"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.7.4/polyfill.min.js"></script>
 	<script src='https://unpkg.com/intersection-observer'></script>
-	<script src='https://unpkg.com/scrollama'></script>
+	<script src='https://unpkg.com/scrollama@1.4.4/build/scrollama.js'></script>
 	<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.heat/0.2.0/leaflet-heat.js"></script>
